Created handlers for 8 task
